src/test/deca/context/invalid/test_error_3.62.deca
// Description:
//    Soulève l'erreur (3.62)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'boolean' n'est pas compatible avec l'opérateur unaire '-' (règle 3.62)
//
// Historique:
//      cree le 06/01/2022

{
	int var;
    var = -true;
}
